# spacy-layout

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish.yml  test.yml
spacy_layout/: __init__.py  layout.py  types.py  util.py
tests/: test_general.py
tests/data/: simple.docx
