[metadata]
version = 0.0.1
description = Use spaCy with PDFs, Word docs and other documents
url = https://github.com/explosion/spacy-layout
author = Explosion
author_email = contact@explosion.ai

[options]
zip_safe = true
python_requires = >=3.10
install_requires =
    spacy>=3.7.5
    docling>=2.5.2

[bdist_wheel]
universal = true

[sdist]
formats = gztar
