[metadata]
version = 0.0.7
description = Use spaCy with PDFs, Word docs and other documents
url = https://github.com/explosion/spacy-layout
author = Explosion
author_email = contact@explosion.ai
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering
project_urls =
    Release notes = https://github.com/explosion/spacy-layout/releases
    Source = https://github.com/explosion/spacy-layout

[options]
zip_safe = true
python_requires = >=3.10
install_requires =
    spacy>=3.7.5
    docling>=2.5.2

[bdist_wheel]
universal = true

[sdist]
formats = gztar
